Added cores to capacity
